[project]
name = "comfyui-sd3latentselectres"
description = "You'll get a new node called SD3/Flux Latent Select Resolution, you can pick the x and y sizes from a list."
version = "2.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/GavChap/ComfyUI-SD3LatentSelectRes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "anymode"
DisplayName = "SD3 and Flux Latent Select Resolution"
Icon = ""
